# new-fave

./: .gitignore  .nojekyll  README.md  index.html  listings.json  objects.inv  pyproject.toml  robots.txt  search.json  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build-docs.yml  dev-tag.yml  pypi_publish.yml  test-and-run.yml
command/: index.html
dev/: index.html  new-fave-approach.html  variable_names.html
dev_plan/: index.html  new-fave-approach.html
docs/: .gitignore  _footer.qmd  _quarto.yml  _variables.yml  index.qmd  objects.json  objects.py  objects.txt  resource_copy.py
docs/_inv/: python_objects.json
docs/command/: index.qmd
docs/dev/: index.qmd  new-fave-approach.qmd  variable_names.qmd
docs/dev_plan/: index.qmd  new-fave-approach.qmd
docs/reference/: _sidebar.yml  extract.qmd  index.qmd  measurements.vowel_measurement.qmd  new_fave.measurements.vowel_measurement.VowelClass.qmd  new_fave.measurements.vowel_measurement.VowelClassCollection.qmd  new_fave.measurements.vowel_measurement.VowelMeasurement.qmd  optimize.optimize.qmd
docs/styles/: dark.scss  light.scss  styles.css
docs/usage/: defaults.qmd  dev.qmd  getting_started.qmd  how_it_works.qmd  index.qmd  python_usage.qmd
docs/usage/configs/: defaults.qmd  ft-config.qmd  index.qmd  point-heuristic.qmd  recode-rules.qmd
docs/usage/customizing/: demographics.qmd  index.qmd  output.qmd  processing.qmd  reference.qmd
docs/usage/outputs/: index.qmd
docs/usage/subcommands/: audio-textgrid.qmd
reference/: SpeakerCollection.html  VowelClass.html  VowelClassCollection.html  VowelMeasurement.html  extract.html  fave_audio_textgrid.html  fave_corpus.html  fave_subcorpora.html  index.html  measurements.calcs.mahalanobis.html  measurements.vowel_measurement.html  new_fave.measurements.vowel_measurement.VowelClass.html  new_fave.measurements.vowel_measurement.VowelClassCollection.html  new_fave.measurements.vowel_measurement.VowelMeasurement.html  optimize.left_edge.html  optimize.optimize.html  patterns.writers.html  pickle_speakers.html  speaker.speaker.Speaker.html  unpickle_speakers.html  utils.local_resources.local_resources.html  write_data.html
resources/: cmu2labov.yml  cmu2phila.yml  fasttrack_config.yml
site_libs/bootstrap/: bootstrap-1284df6bf374f78c042456ac4cf5b42a.min.css  bootstrap-16cd20100bf6407b2fa2d1bb744ad4df.min.css  bootstrap-649186df19564fc15741daa7365ae62d.min.css  bootstrap-81368a91fe28f4d94af975d6c0d1bf9f.min.css  bootstrap-913f89b9af026a2a438eaf4fc36f8269.min.css  bootstrap-cec640e2044d63ada8c80e33e4195910.min.css  bootstrap-dark-307f3353a76ef6eb4836f16653982375.min.css  bootstrap-dark-345b2b48a3c726e032845af68adc9058.min.css  bootstrap-dark-504cfd5f37bd8f60dd4668d52c7da710.min.css  bootstrap-dark-6592b6c762ab4dc6051dd1718814e049.min.css  bootstrap-dark-79a34db459db6395b8215a5993b1827b.min.css  bootstrap-dark-869e565e2b16e3fa41c05ed6b902e57e.min.css  bootstrap-dark-9c8b01bc91e14dc643a087df6e0a0ea9.min.css  bootstrap-dark.min.css  bootstrap-e39f0b9abedb3c9fad513f6961e678d5.min.css  bootstrap.min.css
src/new_fave/: __init__.py  extract.py  logging.py
src/new_fave/measurements/: calcs.py  decorators.py  reference.py  vowel_measurement.py
src/new_fave/optimize/: left_edge.py  optimize.py  optmize.py
src/new_fave/patterns/: common_processing.py  fave_audio_textgrid.py  fave_corpus.py  fave_subcorpora.py  writers.py
src/new_fave/resources/: cmu2labov.yml  cmu2phila.yml  cmu_parser.yml  fasttrack_config.yml  fave_measurement.yml  norecode.yml  vowel_place.yml
src/new_fave/speaker/: speaker.py
src/new_fave/utils/: corpus.py  fasttrack_config.py  local_resources.py  safely.py  textgrid.py  vowel_place.py
styles/: styles.css
tests/: test_cli.py  test_version.py
tests/test_data/: more_rules.yml
tests/test_data/corpus/: josef-fruehwald_speaker_stressless.TextGrid  speakers.csv
tests/test_data/fave_classic/: josef-fruehwald_speaker.TextGrid
tests/test_data/fave_results/: KY25A_1_logparam.csv  KY25A_1_param.csv  KY25A_1_points.csv  KY25A_1_recoded.TextGrid  KY25A_1_tracks.csv  (+5 more)
tests/test_measurements/: test_calcs.py  test_reference.py  test_vowel_measurments.py
tests/test_optimize/: test_optimize.py
tests/test_patterns/: test_audio_textgrid.py  test_corpus.py  test_fave_classic.py  test_ft_config.yml  test_subcorpora.py  test_writer.py
tests/test_speaker/: test_speaker.py
tests/test_utils/: test_fasttrack_config.py  test_resources.py  test_textgrid.py
usage/: defaults.html  getting_started.html  how_it_works.html  index.html  python_usage.html
usage/configs/: defaults.html  ft-config.html  index.html  point-heuristic.html  recode-rules.html  vowel-place.html
usage/customizing/: demographics.html  index.html  output.html  processing.html  reference.html
usage/outputs/: index.html
usage/subcommands/: audio-textgrid.html
(+15 files in other folders)
