[tool.poetry]
name = "new-fave"
version = "0.1.0"
description = "New Vowel Extraction Suite"
authors = ["JoFrhwld <jofrhwld@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "new_fave", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aligned-textgrid = "^0.6.6"
fasttrackpy = "^0.4.4"
numpy = "^1.26.4"
tqdm = "^4.66.2"
fave-recode = "^0.3.0"
click = "^8.1.7"
cloup = "^3.0.5"
fave-measurement-point = "0.1.3"
polars = "^0.20.18"
xlsx2csv = "^0.8.2"


[tool.poetry.group.docs.dependencies]
quartodoc = "^0.7.2"
ipython = "^8.21.0"
nbformat = "^5.9.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
dill = "^0.3.8"
hvplot = "^0.9.2"
pyarrow = "^15.0.2"


[tool.poetry.group.test.dependencies]
pytest = "<8.0.0"
pytest-cov = "<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-config=tests/.coveragerc",
    "--cov-report=xml",
    "--cov",
    "--log-cli-level=INFO"
]
filterwarnings =[
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
pythonpath = "src"
testpaths = "tests"


[tool.poetry.scripts]
fave-extract = 'new_fave.extract:fave_extract'